@startuml Queue

interface "IQueue<T>" {
    + Enqueue(item : T) : void
    + Dequeu() : T
    + Peek() : T
    + Clear() : void
    + Count : int {get}
    + IsEmpty : bool {get}
}

class "Queue<T>" {
    - _queue : IQueue<T>
    __
    + <<constructor>> Queue()
    __
    + Count : int {get}
    + IsEmpty : bool {get}
    __
    + Clear() : void
    + Dequeu() : T
    + Enqueue(item : T) : void
    + Peek() : T
}

class "QueueArray<T>" {
    - array : Array<T>
    __
    + <<constructor>> QueueArray()
    __
    + Count : int {get}
    + IsEmpty : bool {get}
    __
    + Clear() : void
    + Dequeu() : T
    + Enqueue(item : T) : void
    + Peek() : T
}

class "QueueLinkedList<T>" {
    - linkedList : DoublyLinkedList<T>
    __
    + <<constructor>> QueueLinkedList()
    __
    + Count : int {get}
    + IsEmpty : bool {get}
    __
    + Clear() : void
    + Dequeu() : T
    + Enqueue(item : T) : void
    + Peek() : T
}

class "Array<T>"
class "DoublyLinkedList<T>"
interface "IComparable" {
}

"Queue<T>" ..|> "IQueue<T>"
"QueueArray<T>" ..|> "IQueue<T>"
"QueueLinkedList<T>" ..|> "IQueue<T>"

"Queue<T>" o-- "IQueue<T>" : _queue
"Queue<T>" ..> "QueueLinkedList<T>" : <<creates>>
"QueueArray<T>" --> "Array<T>" : <<uses>>
"QueueArray<T>" ..> "IComparable" : <<constraint>>
"QueueLinkedList<T>" --> "DoublyLinkedList<T>" : <<uses>>

note right of "Queue<T>"
    Wrapper queue implementation.
    - Delegates all operations to an
      internal IQueue<T> instance
    - Default implementation is QueueLinkedList<T>
end note

note bottom of "QueueArray<T>"
    Array-backed queue implementation.
    - Uses Array<T> from the Array project
    - Requires T : IComparable
end note

note bottom of "QueueLinkedList<T>"
    Linked-list-backed queue implementation.
    - Uses DoublyLinkedList<T> from the
      LinkedList project
end note

hide empty members

@enduml
